...
    <Text style={[tab.bottomTabItemText, {color: tintColor, marginBottom: 3}, focusStyle ]}>{getTabItemTitleTranslation(name)}</Text>
  )
}

const teamDeleteHeader = (route: any) => (route?.params?.paramTeamName) && (
  <ImageButton
    testID="e2e-boat-delete"
    source={Images.actions.delete}
    style={button.actionIconNavBar}
    imageStyle={{ tintColor: 'white' }}
    onPress={route.params?.onOptionsPressed}
  />)

...
      tabBarInactiveTintColor: $secondaryTextColor,
      tabBarStyle: tab.bottomTabBar,
      tabBarShowLabel: true,
      tabBarLabelPosition: 'below-icon',
      tabBarHideOnKeyboard: Platform.OS === 'android',
      tabBarButtonTestID: ({
        [Screens.Account]: 'e2e-account-tab',
        [Screens.SessionsNavigator]: 'e2e-events-tab',
        [Screens.TrackingNavigator]: 'e2e-tracking-tab',
      } as Record<string, string>)[route.name],

      lazy: false,
      headerShown: false,
...
