...
  )

  protected renderAddItem = () => {
    return(
      <TouchableOpacity
        style={[button.actionRectangular, styles.addButton]}
        testID="e2e-new-boat"
        onPress={() => this.props.navigation.navigate(Screens.TeamDetails)}>
        <Text style={styles.textStyle}>
          {I18n.t('caption_new_team').toUpperCase()}
        </Text>
      </TouchableOpacity>
    )
...
