...

const editResultsButton = Component((props: any) => compose(
  fold(props),
  textButton({
    onPress: async (props: any) => {
      if (props.showEditResultsDisclaimer) {
        const stopShowing = !(await alertPromise('', I18n.t('text_edit_results_disclaimer'), 'OK', I18n.t('caption_dont_show_again')))
        if (stopShowing) { props.updateShowEditResultsDisclaimer(false) }
      }
      props.navigation.navigate(Screens.EditResults, { data: { url: editResultsUrl(props.session) } })
    },
    style: [styles.button],
    textStyle: styles.buttonContent,
...
