...
  "error_no_venue": "No location chosen. Please select a location.",
  "error_no_boat_class": "No boats class chosen. Please select a boats class.",
  "error_leaderboard_group_already_exists": "An event with this name already exists, please choose a different name.",
  "error_regatta_already_exists": "A regatta with this name exists already. Please choose another name.",
  "error_leaderboard_already_exists": "A leaderboard with this name exists already. Please choose another name.",
  "error_need_name": "Please enter your name",
  "error_need_username": "Please enter a user name",
  "error_need_password": "Please enter a password",
  "error_need_email": "Please enter your e-mail address",
  "error_need_email_or_username": "Please enter your e-mail address or user name",
  "error_login_incorrect": "The username or password you entered is incorrect",
  "error_offline_competitor_registration": "You need to connect to the internet to complete your registration in order to start tracking",
  "error_network_required_alert": "Please make sure your device is connected to the internet and then try again. If the error persists, please contact support@sapsailing.com",
  "error_network_required_snackbar": "Network connection required to perform this action",
  "error_course_saved_following_races_failed": "Course saved, but it could not be copied to one or more following races.",
  "error_course_default_marks_missing": "The default marks are not available. Please check your mark inventory and try again.",
  "error_mark_position_invalid": "No valid position available. Please try again.",
...
